--- a/styles/architects.css
+++ b/styles/architects.css
@@ -1,7 +1,188 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-.work-sans-font{
-  font-family: "Work Sans", sans-serif;
-  font-optical-sizing: auto;
+.work-sans-font {
+    font-family: "Work Sans", sans-serif;
+    font-optical-sizing: auto;
+}
+
+/* shared styles */
+.display-flex {
+    display: flex;
+}
+
+.btn-primary {
+    border-radius: 8px;
+    background-color: #FF900E;
+    font-size: 1.25rem;
+    font-weight: 600px;
+    padding: 20px 24px;
+    border: none;
+    margin-bottom: 40px;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+/* dark 02 */
+.text-gray {
+    color: #424242;
+}
+
+/* dark 03 */
+.text-light-gray {
+    color: #727272;
+}
+
+.bg-light {
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+/* header styles */
+
+/* navbar related styles */
+
+.navbar {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.brand {
+    font-size: 45px;
+    font-weight: 700px;
+
+}
+
+.nav-item {
+    list-style: none;
+    margin-right: 30px;
+}
+
+.nav-link {
+    text-decoration: none;
+}
+
+.navbar,
+.banner {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.navbar {
+    margin-bottom: 116px;
+    padding-top: 50px;
+}
+
+/* banner related styles */
+.banner-content {
+    max-width: 860px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.banner-title {
+    font-size: 4rem;
+    font-weight: 700px;
+    margin-bottom: 24px;
+}
+
+.lorem {
+    font-size: 16px;
+    color: #727272;
+    margin-bottom: 30px;
+    line-height: 20px;
+}
+
+.btn-primary {
+    border-radius: 8px;
+    background-color: #FF900E;
+    font-size: 15px;
+    font-weight: 600px;
+    padding: 15px 20px;
+    border: none;
+    margin-bottom: 30px;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.banner img {
+    margin-bottom: 45px;
+    width: 100%;
+}
+
+/* main section */
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.images {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.teams {
+    margin-top: 85px;
+    gap: 73px;
+    align-items: center;
+}
+
+.features {
+    max-width: 530px;
+}
+
+.features-title {
+    font-size: 2.8rem;
+    margin-bottom: 24px;
+}
+
+.salate {
+    color: #727272;
+    font-weight: 500;
+}
+
+.black {
+    color: #131313;
+}
+
+.orang {
+    color: #FF900E;
+}
+
+.features p {
+    font-size: 1rem;
+    line-height: 26px;
+    color: #727272;
+    margin-bottom: 32px;
+}
+
+/* responsive media query */
+@media screen and (max-width:576px) {
+
+    .navbar,
+    .nav-link,
+    .teams {
+        flex-direction: column;
+    }
+
+    .navbar {
+        margin-bottom: 60px;
+    }
+
+    .images {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+/* medium size device */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams, .navbar {
+        flex-direction: column;
+    }
 }
